scrollbar fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,9 +15,6 @@ body {
   min-height: 100vh;
   background-color: #515151;
 }
-::-webkit-scrollbar {
-  width: 0px;
-}
 @media (max-width: 700px) {
   ::-webkit-scrollbar {
     width: 0px;
